[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Ana Laura Almonte", email = "ana.almonte@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["numpy", "scikit-learn","pytest","heapq"]
[project.urls]
Home = "https://github.com/almonteloya"
